--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -8196,3 +8196,22 @@
     model: Red Pepper 8X Pro
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; 20190718Q Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.120
+  os:
+    name: Android
+    version: 9
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 77.0.3865.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Xiaolajiao
+    model: Red Pepper 9X
+  os_family: Android
+  browser_family: Chrome
+
