--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11789,7 +11789,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[630]|8[059]|9[35])|220[01]|18(0[1579]|11|3[13]|2[157]|[45]1|45)|3201|30([348]1|92|63)|312[12])|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[630]|8[059]|9[35])|220[01]|18(0[1579]|11|3[13]|2[157]|[45]1|45)|3201|30([348]1|9[23]|63)|312[12])|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -11896,6 +11896,8 @@ Realme:
       model: 'V11 5G'
     - regex: 'RMX3041'
       model: 'V13'
+    - regex: 'RMX3093'
+      model: 'V15'
     - regex: 'RMX3201'
       model: 'C21'
     - regex: 'Realme[ _]([1-9])[ _]Pro(?:[);/ ]|$)'
