--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -8223,12 +8223,30 @@
   client:
     type: browser
     name: Chrome Webview
-    version: 77.0
+    version: 77.0.3865.120
     engine: Blink
     engine_version: ""
   device:
     type: smartphone
     brand: Realme
     model: V15
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; PEEM00 Build/RKQ1.201217.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.120
+  os:
+    name: Android
+    version: 11
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 77.0.3865.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: OPPO
+    model: Find X3 Pro
   os_family: Android
   browser_family: Chrome
