--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6116,3 +6116,21 @@
     model: Redmi Note 10 Pro
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; A001XM) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.91 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 90.0.4430.91
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Xiaomi
+    model: Redmi Note 9T 5G
+  os_family: Android
+  browser_family: Chrome
